Significant work for #28
I have made significant progress on integrating this new layout with the main app. I'm having trouble correctly linking the buttons though.

--- a/app.ui
+++ b/app.ui
@@ -211,9 +211,9 @@
  <connections>
   <connection>
    <sender>commandLinkButton</sender>
-   <signal>clicked()</signal>
+   <signal>clicked(bool)</signal>
    <receiver>MainWindow</receiver>
-   <slot>newNoteSlot()</slot>
+   <slot>openNoteSlot(bool)</slot>
    <hints>
     <hint type="sourcelabel">
      <x>51</x>
